[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blrcs"
version = "0.0.1"
description = "BLRCS - Enterprise-grade security and monitoring system"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "BLRCS Development Team", email = "dev@blrcs.org"}
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
  "E", "F", "I", "W",      # pycodestyle/pyflakes/isort/warnings
  "UP", "B", "SIM", "ASYNC", # modernize/bugbear/simplify/async
  "BLE", "C4", "PIE", "T20",  # exceptions, comprehensions, flake8-pie, print
  "ARG"
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"

